# The_habits_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
habits/: admin.py  constans.py  models.py  paginations.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  validtors.py  views.py
habits/migrations/: 0001_initial.py  0002_periodicity_alter_habit_periodicity.py  0003_alter_habit_periodicity.py  0004_auto_20250618_1917.py  0005_alter_periodicity_unit.py  0006_alter_habit_time_to_complete.py  0007_alter_habit_options.py
htmlcov/: index.html
nginx/: nginx.conf
users/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_tg_nickname_user_tg_chat_id.py
